--- a/index.html
+++ b/index.html
@@ -32,3 +32,36 @@
     </footer>
 </body>
 </html>
+/*
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Thanksgiving Home</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="history.html">History</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="traditions.html">Traditions</a></li>
+      <li><a href="decorations.html">DIY Crafts</a></li>
+      <li><a href="gratitude.html">Gratitude</a></li>
+    </ul>
+  </nav>
+  <header>
+    <h1>Welcome to Our Thanksgiving Website</h1>
+    <p>Celebrate the joy, gratitude, and traditions of Thanksgiving with us!</p>
+  </header>
+  <main>
+    <p>Explore recipes, traditions, and crafts to make your Thanksgiving unforgettable.</p>
+  </main>
+  <footer>
+    <p>&copy; 2024 Thanksgiving Website</p>
+  </footer>
+</body>
+</html>
+*/
