--- a/pages/page1.html
+++ b/pages/page1.html
@@ -31,3 +31,35 @@
     </footer>
 </body>
 </html>
+/*
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>History of Thanksgiving</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="history.html">History</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="traditions.html">Traditions</a></li>
+      <li><a href="decorations.html">DIY Crafts</a></li>
+      <li><a href="gratitude.html">Gratitude</a></li>
+    </ul>
+  </nav>
+  <header>
+    <h1>History of Thanksgiving</h1>
+  </header>
+  <main>
+    <p>Thanksgiving has a rich history, dating back to the Pilgrims' feast in 1621. Learn about the traditions and events that made it a national holiday.</p>
+  </main>
+  <footer>
+    <p>&copy; 2024 Thanksgiving Website</p>
+  </footer>
+</body>
+</html>
+*/
