--- a/pages/page4.html
+++ b/pages/page4.html
@@ -32,3 +32,34 @@
 </body>
 </html>
 /*
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gratitude</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="history.html">History</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="traditions.html">Traditions</a></li>
+      <li><a href="decorations.html">DIY Crafts</a></li>
+      <li><a href="gratitude.html">Gratitude</a></li>
+    </ul>
+  </nav>
+  <header>
+    <h1>What Are You Thankful For?</h1>
+  </header>
+  <main>
+    <p>Take a moment to reflect and share your gratitude.</p>
+  </main>
+  <footer>
+    <p>&copy; 2024 Thanksgiving Website</p>
+  </footer>
+</body>
+</html>
+*/
