--- a/pages/page5.html
+++ b/pages/page5.html
@@ -31,3 +31,27 @@
     </footer>
 </body>
 </html>
+/*
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Thanksgiving Fun Facts</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="history.html">History</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="traditions.html">Traditions</a></li>
+      <li><a href="decorations.html">DIY Crafts</a></li>
+      <li><a href="gratitude.html">Gratitude</a></li>
+      <li><a href="funfacts.html">Fun Facts</a></li>
+    </ul>
+  </nav>
+  <header>
+    <h1>Thanksgiving Fun Facts</h
+*/
