--- a/pages/decorations.html
+++ b/pages/decorations.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thanksgiving Home</title>
+  <title>Gratitude</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,15 +18,14 @@
     </ul>
   </nav>
   <header>
-    <h1>Welcome to Our Thanksgiving Website</h1>
-    <p>Celebrate the joy, gratitude, and traditions of Thanksgiving with us!</p>
+    <h1>What Are You Thankful For?</h1>
   </header>
   <main>
-    <p>Explore recipes, traditions, and crafts to make your Thanksgiving unforgettable.</p>
+    <p>Take a moment to reflect and share your gratitude.</p>
   </main>
   <footer>
     <p>&copy; 2024 Thanksgiving Website</p>
   </footer>
 </body>
 </html>
-
+*/
