--- a/pages/gratitude.html
+++ b/pages/gratitude.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thanksgiving Home</title>
+  <title>Thanksgiving Fun Facts</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,18 +15,9 @@
       <li><a href="traditions.html">Traditions</a></li>
       <li><a href="decorations.html">DIY Crafts</a></li>
       <li><a href="gratitude.html">Gratitude</a></li>
+      <li><a href="funfacts.html">Fun Facts</a></li>
     </ul>
   </nav>
   <header>
-    <h1>Welcome to Our Thanksgiving Website</h1>
-    <p>Celebrate the joy, gratitude, and traditions of Thanksgiving with us!</p>
-  </header>
-  <main>
-    <p>Explore recipes, traditions, and crafts to make your Thanksgiving unforgettable.</p>
-  </main>
-  <footer>
-    <p>&copy; 2024 Thanksgiving Website</p>
-  </footer>
-</body>
-</html>
-
+    <h1>Thanksgiving Fun Facts</h
+*/
