--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thanksgiving Home</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Holiday Page - Home</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Metal+Mania&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="history.html">History</a></li>
-      <li><a href="recipes.html">Recipes</a></li>
-      <li><a href="traditions.html">Traditions</a></li>
-      <li><a href="decorations.html">DIY Crafts</a></li>
-      <li><a href="gratitude.html">Gratitude</a></li>
-    </ul>
-  </nav>
-  <header>
-    <h1>Welcome to Our Thanksgiving Website</h1>
-    <p>Celebrate the joy, gratitude, and traditions of Thanksgiving with us!</p>
-  </header>
-  <main>
-    <p>Explore recipes, traditions, and crafts to make your Thanksgiving unforgettable.</p>
-  </main>
-  <footer>
-    <p>&copy; 2024 Thanksgiving Website</p>
-  </footer>
+    <header>
+        <h1>Welcome to my Thanksgiving Website</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pages/history.html">Page1</a></li>
+                <li><a href="pages/recipes.html">Page2</a></li>
+                <li><a href="pages/traditions.html">Page3</a></li>
+                <li><a href="pages/decorations.html">Page4</a></li>
+                <li><a href="pages/gratitude.html">Page5</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <main>
+        <h2> Welcome</h2>
+        <p></p>
+    </main>
+    
+    <footer>
+        <p>&copy; 2024 My Holiday Website</p>
+    </footer>
 </body>
 </html>
+
+
 
