--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Holiday Page - Home</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Metal+Mania&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <header>
@@ -13,11 +13,11 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="pages/history.html">Page1</a></li>
-                <li><a href="pages/recipes.html">Page2</a></li>
-                <li><a href="pages/traditions.html">Page3</a></li>
-                <li><a href="pages/decorations.html">Page4</a></li>
-                <li><a href="pages/gratitude.html">Page5</a></li>
+                <li><a href="pages/history.html">History</a></li>
+                <li><a href="pages/recipes.html">Recipes</a></li>
+                <li><a href="pages/traditions.html">Traditions</a></li>
+                <li><a href="pages/decorations.html">Decorations</a></li>
+                <li><a href="pages/facts.html">Facts</a></li>
             </ul>
         </nav>
     </header>
