--- a/pages/facts.html
+++ b/pages/facts.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Holiday Page - Page1</title>
+    <title>My Holiday Page - Page5</title>
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
     <header>
-        <h1>History of Thanksgiving</h1>
+        <h1>Thanksgiving Fun Facts</h1>
         <nav>
             <ul>
               <li><a href="index.html">Home</a></li>
+              <li><a href="history.html">History</a></li>
               <li><a href="recipes.html">Recipes</a></li>
               <li><a href="traditions.html">Traditions</a></li>
               <li><a href="decorations.html">Decorations</a></li>
-              <li><a href="facts.html">Facts</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
         <h2></h2>
-        <p>Thanksgiving has a rich history, dating back to the Pilgrims' feast in 1621. Learn about the traditions and events that made it a national holiday.</p>
+        <p></p>
     </main>
     
     <footer>
