--- a/pages/traditions.html
+++ b/pages/traditions.html
@@ -9,21 +9,21 @@
 </head>
 <body>
     <header>
-        <h1>Page3</h1>
+        <h1>Thanksgiving Traditions</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="page1.html">Page1</a></li>
-                <li><a href="page2.html">Page2</a></li>
-                <li><a href="page4.html">Page4</a></li>
-                <li><a href="page5.html">Page5</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="history.html">History</a></li>
+              <li><a href="recipes.html">Recipes</a></li>
+              <li><a href="decorations.html">Decorations</a></li>
+              <li><a href="facts.html">Facts</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
         <h2></h2>
-        <p></p>
+        <p>Learn about Thanksgiving parades, football games, and more!</p>
     </main>
     
     <footer>
@@ -31,35 +31,3 @@
     </footer>
 </body>
 </html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thanksgiving Traditions</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="history.html">History</a></li>
-      <li><a href="recipes.html">Recipes</a></li>
-      <li><a href="traditions.html">Traditions</a></li>
-      <li><a href="decorations.html">DIY Crafts</a></li>
-      <li><a href="gratitude.html">Gratitude</a></li>
-    </ul>
-  </nav>
-  <header>
-    <h1>Thanksgiving Traditions</h1>
-  </header>
-  <main>
-    <p>Learn about Thanksgiving parades, football games, and more!</p>
-  </main>
-  <footer>
-    <p>&copy; 2024 Thanksgiving Website</p>
-  </footer>
-</body>
-</html>
-*/
