--- a/pages/facts.html
+++ b/pages/facts.html
@@ -12,7 +12,7 @@
         <h1>Thanksgiving Fun Facts</h1>
         <nav>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="history.html">History</a></li>
               <li><a href="recipes.html">Recipes</a></li>
               <li><a href="traditions.html">Traditions</a></li>
