--- a/pages/facts.html
+++ b/pages/facts.html
@@ -23,7 +23,15 @@
     
     <main>
         <h2></h2>
-        <p></p>
+        <p>
+            <ul>
+                <li class="facts">Abraham Lincoln made Thanksgiving a national holiday in 1863</li>
+                <li class="facts">Turkey wasn't on the menu at the first Thanksgiving. Venison, duck, goose, oysters, lobster, eel, and fish were likely served.</li>
+                <li class="facts">Thanksgiving dates back to 1621</li>
+                <li class="facts">The First Thanksgiving feast was three days long</li>
+                <li class="facts">46 million turkeys will be eaten over Thanksgiving</li>
+            </ul>
+        </p>
     </main>
     
     <footer>
