--- a/pages/history.html
+++ b/pages/history.html
@@ -23,7 +23,7 @@
     
     <main>
         <h2></h2>
-        <p>Thanksgiving has a rich history, dating back to the Pilgrims' feast in 1621. Learn about the traditions and events that made it a national holiday.</p>
+        <p class="history">Thanksgiving has a rich history, dating back to the Pilgrims' feast in 1621. Learn about the traditions and events that made it a national holiday.</p>
         <img src="https://static01.nyt.com/images/2019/11/27/opinion/27silverman/27silverman-superJumbo.jpg" height="600" width="854.520166898">
     </main>
     
