--- a/pages/traditions.html
+++ b/pages/traditions.html
@@ -22,10 +22,7 @@
     </header>
     
     <main>
-        <h2>-dinner -pie -pumpkin</h2>
-        <h2>-family -pilgrim -stuffing</h2>
-        <h2>-ham -potatoes -turkey</h2>
-        <img src="https://puzzlemaker.discoveryeducation.com/puzzlemaker?&id=x0hyr4kU3Qg&data=eEz5oLs%2bmja%2fQnUI%2fFBGh05PqgGixrp1jGJWtXf7hIRXPs0hY36eRtDPqJzIOc9tNY02zxIyIW%2bi8PDI0XT7hzRd%2bwVGUKVMfQDJ%2fsLXwN8uizXFt01wa%2biQwhtpYAcl5VpG7kLtAdavgbwyUUG3ZQJHR4ZX9PMsOvNNkiO8Irk%3d&disp=vQTtyAaQV72wGlKbCnoN7w%3d%3d">
+        <img src="puzzlemaker.png">
     </main>
     
     <footer>
