--- a/pages/traditions.html
+++ b/pages/traditions.html
@@ -22,7 +22,10 @@
     </header>
     
     <main>
-        <img src="puzzlemaker.png">
+        <h2>-dinner -family -ham</h2>
+        <h2>-pie -pilgrim -potatoes</h2>
+        <h2>-pumpkin -stuffing -turkey</h2>
+        <img src="https://puzzlemaker.discoveryeducation.com/puzzlemaker?&id=QmGN4BAW3Qg&data=6I15OsQ8zNr04dTuXXw7L8ExvLSZT4gVa5CIYPXv%2bAd4O0XjhoEW3fxhP74ftC18Nee4d0QznjMONwiNLX2Cx10j9wp5r%2famf0rEpjXJlbDbXacK26aoFMMhOI3gvtxKTdBx4fYsthMB%2bbjHZ9nW7hmZErqMFt9kHVzgaqVdjoE%3d&disp=vQTtyAaQV72wGlKbCnoN7w%3d%3d">
     </main>
     
     <footer>
